# AServer

./: .gitignore  CMakeLists.txt  README.md  README_VCPKG.md  build_windows.bat  build_wsl.sh  vcpkg.json
lua51/: CMakeLists.txt
sceneobj/: CMakeLists.txt
sceneobj/action/: state.cpp  state.h  state_msg.cpp  state_msg.h  states.cpp  states.h
sceneobj/ai/: action.cpp  action.h  action_ex.cpp  action_ex.h  btnode.cpp  btnode.h  btree.cpp  btree.h  common.cpp  common.h  component_ai.cpp  component_ai.h  composite.cpp  composite.h  condition.cpp  condition.h  load_btree.cpp  load_btree.h  share_const.h  threat_mgr.cpp  threat_mgr.h  tinystr.cpp  tinystr.h  tinyxml.cpp  tinyxml.h  tinyxmlerror.cpp  tinyxmlparser.cpp  utils.cpp  utils.h
sceneobj/object/: bezier_curve.cpp  bezier_curve.h  bullet.cpp  bullet.h  camp_mng.cpp  camp_mng.h  ctrl.cpp  ctrl.h  curve_mng.cpp  curve_mng.h  item.cpp  item.h  magic_area.cpp  magic_area.h  missile.cpp  missile.h  monster.cpp  monster.h  nav_points.h  obj.cpp  obj.h  pick_point.cpp  pick_point.h  player.cpp  player.h  player_mng.cpp  player_mng.h  snapshot.cpp  snapshot.h  spirit.cpp  spirit.h  trigger.cpp  trigger.h
sceneobj/sceneobj_utils/: scene_obj_utils.cpp
server/gameserver/: CMakeLists.txt  bf_client_module.cpp  bf_client_module.h  db_client_module.cpp  db_client_module.h  game_lua_module.cpp  game_lua_module.h  game_svr_module.cpp  game_svr_module.h  gm_client_module.cpp  gm_svr_module.cpp  gm_svr_module.h  log_client_module.cpp  log_client_module.h  login_client_module.cpp  login_client_module.h
server/gameserver/UnitTest/: game_app.cpp  gameserver.lua.svn  run.sh  test.nav  test.navmesh
server/gameserver/UnitTest/script/: global.lua  gm_cmd.lua  luacommon  main.lua
server/gameserver/UnitTest/script/login/: login_base.lua  login_mng.lua
server/gameserver/UnitTest/script/net/: bfclient.lua  (+4 more)
server/loginserver/: CMakeLists.txt  game_login_svr_module.cpp  game_login_svr_module.h  gm_client_module.cpp  gm_client_module.h  log_client_module.cpp  login_lua_module.cpp  login_lua_module.h  my_min_heap.h  player_login_svr_module.cpp  player_login_svr_module.h
server/loginserver/UnitTest/: login_app.cpp  loginserver.lua.svn  mysql.lua.svn  run.sh
server/loginserver/UnitTest/script/: global.lua  gm_cmd.lua  main.lua
server/logserver/: CMakeLists.txt  gm_client_module.cpp  log_lua_module.cpp  log_lua_module.h  log_svr_module.cpp  log_svr_module.h
server/logserver/UnitTest/: log_app.cpp  logserver.lua.svn  logserverlog_app  run.sh
server/logserver/UnitTest/script/: luacommon  main.lua
server/robotclient/: CMakeLists.txt  robot_client_module.cpp  robot_client_module.h  robot_lua_module.cpp  robot_lua_module.h
server/robotclient/UnitTest/: resource  robot_app.cpp  robotclient.lua.svn
server/robotclient/UnitTest/script/: main.lua
server_engine/: CMakeLists.txt
server_engine/base/: CMakeLists.txt  app_base.cpp  app_curl_module.cpp  app_log_module.cpp  app_net_module.cpp  app_timer_module.cpp  connect_thread.cpp  logic_thread.cpp
server_engine/base/UnitTest/: app_base_test.cpp  app_base_test.lua
server_engine/c-ares-1.10.0/: config.status  libtool
server_engine/c-ares-1.10.0/.deps/: acountry-acountry.Po  acountry-ares_getopt.Po  acountry-ares_nowarn.Po  acountry-ares_strcasecmp.Po  adig-adig.Po  adig-ares_getopt.Po  adig-ares_nowarn.Po  adig-ares_strcasecmp.Po  ahost-ahost.Po  ahost-ares_getopt.Po  ahost-ares_nowarn.Po  ahost-ares_strcasecmp.Po  libcares_la-ares__close_sockets.Plo  libcares_la-ares__get_hostent.Plo  libcares_la-ares__read_line.Plo  libcares_la-ares__timeval.Plo  libcares_la-ares_cancel.Plo  libcares_la-ares_create_query.Plo  libcares_la-ares_data.Plo  libcares_la-ares_destroy.Plo  libcares_la-ares_expand_name.Plo  libcares_la-ares_expand_string.Plo  libcares_la-ares_fds.Plo  libcares_la-ares_free_hostent.Plo  libcares_la-ares_free_string.Plo  libcares_la-ares_getenv.Plo  libcares_la-ares_gethostbyaddr.Plo  libcares_la-ares_gethostbyname.Plo  libcares_la-ares_getnameinfo.Plo  libcares_la-ares_getsock.Plo  libcares_la-ares_init.Plo  libcares_la-ares_library_init.Plo  libcares_la-ares_llist.Plo  libcares_la-ares_mkquery.Plo  libcares_la-ares_nowarn.Plo  libcares_la-ares_options.Plo  libcares_la-ares_parse_a_reply.Plo  libcares_la-ares_parse_aaaa_reply.Plo  libcares_la-ares_parse_mx_reply.Plo  libcares_la-ares_parse_naptr_reply.Plo  (+20 more)
server_engine/chipmunk/: CMakeLists.txt  cpBBTree.cpp
server_engine/curl-7.41.0/src/: tool_hugehelp.c
server_engine/detour/: CMakeLists.txt  DetourNavMesh.cpp  DetourNavMeshBuilder.cpp  DetourNavMeshQuery.cpp  DetourNode.cpp
server_engine/gperftools-2.1/: Makefile.server_engine
server_engine/libunwind-0.99-beta/: Makefile.server_engine
server_engine/libunwind-0.99-beta/include/tdep/: tdep-x86
server_engine/libunwind-0.99-beta/src/x86_64/: setcontext.loT
server_engine/luajitlib/jit/: opt.lua  opt_const.lua
server_engine/luajitlib/src/: lapi.c  lcode.c  lcode.h  ldblib.c  ldump.c  linit.c  liolib.c  ljit_backend.c  ljit_core.c  ljit_hints.h  ljit_x86.dasc  ljit_x86.dash  ljit_x86.h  ljitlib.c  llex.c  llex.h  lobject.h  lopcodes.c  lopcodes.h  loslib.c  lparser.c  lstrlib.c  ltable.c  ltm.c  ltm.h  lua  lua_cjson.c  lua_cmsgpack.c  luac  lualib.h  lundump.h  lvm.c  print.c
server_engine/luawrapper/: CMakeLists.txt  lar.cpp  llog.cpp  lua_debugger.cpp  lua_server.cpp  lua_utils.cpp
server_engine/misc/: 3dmath.cpp  CMakeLists.txt  app_fx.cpp  ar.cpp  autolock.cpp  buddy.cpp  cpcqueue.cpp  database.cpp  des.c  event.cpp  ffsys.cpp  htime.cpp  lj_alloc.cpp  log.cpp  lunar.cpp  mallochook.c  matrix.cpp  md5.cpp  misc.cpp  mymap32.cpp  mystring.cpp  path_misc.cpp  pcqueue.c  random_generator.cpp  thread.cpp  timer.cpp  vector.cpp
server_engine/network/: CMakeLists.txt  buffer.cpp  clientsocket.cpp  commonsocket.cpp  endpoint.cpp  ff_network.dsp  ffpoll.cpp  ffsock.c  flow_rate.cpp  netmng.cpp  pike.cpp  pike.lua  selectthread.cpp  serversocket.cpp  socket.cpp
server_engine/scene/: CMakeLists.txt  navmesh.cpp  resource.cpp  scene.cpp  world.cpp  world_mng.cpp
(+452 files in other folders)
